<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home1" />
        <item
            android:id="@+id/nav_gsmTable"
            android:icon="@drawable/baseline_table_view_24"
            android:title="@string/gsm_table" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/About_us" />
    </group>
</menu>