<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.aftab.ratecalculator.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.aftab.ratecalculator.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_gsmTable"
        android:name="com.aftab.ratecalculator.ui.gsm_Table.GsmTableFragment"

        android:label="@string/gsm_table"
        tools:layout="@layout/fragment_gsm_table" />
    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.aftab.ratecalculator.ui.aboutUs.AboutUsFragment"
        android:label="@string/About_us"
        tools:layout="@layout/fragment_about_us" />
</navigation>